# LEDGER

./: .gitignore  CLAUDE.md  LICENSE  NoteAmaury.md  Notes.md  Plan.md  README.md  main.py  pyproject.toml
KPI_analysis/: FinancialIndicators.py  README.md  _check_outliers.py  _fiscal.py  alpha_vantage.py  build_dataset.py  check_event_window_nans.py  cron_av_fetch.sh  distribution_all_stocks.py  distributions_by_return_m90.py  distributions_delta_t1_vs_tm1.py  edgar.py  edgar_filings.py  evaluation.py  event_single_stock.py  event_study_earnings.py  fetch_filing_returns.py  fetch_kpis.py  filing_returns_validation.md  generate_qrels.py  kpi_aliases.json  llm_annotate_qrels.py  migrate_fy_keying.py  plot_grid_search_binary_heatmaps.py  plot_grid_search_heatmaps.py  plot_indicators.py  predict_target.py  predict_target_embed_encoder.py  scatter_surprise_vs_return_h90.py  scatter_vol_volume.py  sentiment_vs_indicators.py  tags.py  threshold_grid_search.py  threshold_grid_search_binary.py  threshold_h90_return_and_surprise.py  validate_ocr_kpis.py  verify_selection_bias.py  yf_fallback.py
KPI_analysis/find_more_queries/: build_report.py  remove_existing.py  (+2 more)
annotation_OCR/: README.md  __init__.py  ocr_index.py  server.py  store.py  study_agreement.py  study_sessions.py  summarize.py
annotation_qrels/: build_subset_manifest.py  compute_agreement.py  qrels_index.py  server.py  store.py
doc_text_processing/: mmd_length_stats.py
retrieval/: evaluate.py  retrieval.py
scripts/: fix_broken_dollar_overlap.py
tickers_lists/: companies_alt_names.json  file_list.txt
(+149 files in other folders)
