[project]
name = "ardian-dataset-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.3.0",
    "flask>=3.1.3",
    "lxml>=6.1.1",
    "markdown>=3.10.2",
    "matplotlib>=3.10.9",
    "openai>=2.33.0",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
    "scikit-learn>=1.9.0",
    "tiktoken>=0.13.0",
    "tqdm>=4.67.3",
    "yfinance>=1.3.0",
]
